--- a/clip-path-top-menu/index.html
+++ b/clip-path-top-menu/index.html
@@ -24,6 +24,8 @@
         }
         /* Clipping for top-bar */
         .top-bar {
+			-ms-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 80% 80%, 60% 80%, 40% 80%, 20% 80%);
+			-moz-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 80% 80%, 60% 80%, 40% 80%, 20% 80%);
             -webkit-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 80% 80%, 60% 80%, 40% 80%, 20% 80%);
             clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 80% 80%, 60% 80%, 40% 80%, 20% 80%);
         }
@@ -88,33 +90,57 @@
         /* #######  Animations to move clip-path to give tab-slide-down feeling  ####### */
         @keyframes top1SlideDown {
             from {
+				-ms-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 25% 80%, 22.5% 80%, 2.5% 80%, 0 80%);
+				-moz-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 25% 80%, 22.5% 80%, 2.5% 80%, 0 80%);
+				-webkit-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 25% 80%, 22.5% 80%, 2.5% 80%, 0 80%);
                 clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 25% 80%, 22.5% 80%, 2.5% 80%, 0 80%);
             }
             to {
+				-ms-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 25% 80%, 22.5% 100%, 2.5% 100%, 0 80%);
+				-moz-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 25% 80%, 22.5% 100%, 2.5% 100%, 0 80%);
+				-webkit-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 25% 80%, 22.5% 100%, 2.5% 100%, 0 80%);
                 clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 25% 80%, 22.5% 100%, 2.5% 100%, 0 80%);
             }
         }
         @keyframes top2SlideDown {
             from {
+				-ms-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 50% 80%, 47.5% 80%, 27.5% 80%, 25% 80%);
+				-moz-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 50% 80%, 47.5% 80%, 27.5% 80%, 25% 80%);
+				-webkit-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 50% 80%, 47.5% 80%, 27.5% 80%, 25% 80%);
                 clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 50% 80%, 47.5% 80%, 27.5% 80%, 25% 80%);
             }
             to {
+				-ms-clip-path: 
+				-moz-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 50% 80%, 47.5% 100%, 27.5% 100%, 25% 80%);
+				-webkit-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 50% 80%, 47.5% 100%, 27.5% 100%, 25% 80%);
                 clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 50% 80%, 47.5% 100%, 27.5% 100%, 25% 80%);
             }
         }
         @keyframes top3SlideDown {
             from {
+				-ms-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 75% 80%, 72.5% 80%, 52.5% 80%, 50% 80%);
+				-moz-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 75% 80%, 72.5% 80%, 52.5% 80%, 50% 80%);
+				-webkit-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 75% 80%, 72.5% 80%, 52.5% 80%, 50% 80%);
                 clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 75% 80%, 72.5% 80%, 52.5% 80%, 50% 80%);
             }
             to {
+				-ms-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 75% 80%, 72.5% 100%, 52.5% 100%, 50% 80%);
+				-moz-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 75% 80%, 72.5% 100%, 52.5% 100%, 50% 80%);
+				-webkit-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 75% 80%, 72.5% 100%, 52.5% 100%, 50% 80%);
                 clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 75% 80%, 72.5% 100%, 52.5% 100%, 50% 80%);
             }
         }
         @keyframes top4SlideDown {
             from {
+				-ms-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 100% 80%, 97.5% 80%, 77.5% 80%, 75% 80%);
+				-moz-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 100% 80%, 97.5% 80%, 77.5% 80%, 75% 80%);
+				-webkit-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 100% 80%, 97.5% 80%, 77.5% 80%, 75% 80%);
                 clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 100% 80%, 97.5% 80%, 77.5% 80%, 75% 80%);
             }
             to {
+				-ms-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 100% 80%, 97.5% 100%, 77.5% 100%, 75% 80%);
+				-moz-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 100% 80%, 97.5% 100%, 77.5% 100%, 75% 80%);
+				-webkit-clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 100% 80%, 97.5% 100%, 77.5% 100%, 75% 80%);
                 clip-path: polygon(0 80%, 0 0, 100% 0, 100% 80%, 100% 80%, 97.5% 100%, 77.5% 100%, 75% 80%);
             }
         }
